Létrehozva a Colaboratory használatával

--- a/routingtable.ipynb
+++ b/routingtable.ipynb
@@ -6,7 +6,7 @@
     "colab": {
       "name": "routingtable.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPqHql8Ax87vyE0Fj+XF/J",
+      "authorship_tag": "ABX9TyPHOEqD5RdKxMLNOGoqL9lo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,8 +41,17 @@
         "import random\n",
         "from scipy.stats import entropy"
       ],
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0qxlJ8GXqu2d"
+      },
+      "source": [
+        "# I/O"
+      ]
     },
     {
       "cell_type": "code",
@@ -59,7 +68,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 32,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -74,7 +83,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 33,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -83,8 +92,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "M3EJ-NmkjuPr",
-        "outputId": "bb7db5dc-619d-4f83-96e7-abdaf8657a41"
+        "id": "2a3rr_jOt0F-",
+        "outputId": "56a67df5-0287-4d38-d10e-614a3927d483"
       },
       "source": [
         "# List of the positions of nodes\n",
@@ -93,16 +102,9 @@
         "\n",
         "# List of how nodes connected to each other\n",
         "# connections = connectionRead(\"Network/Brain_data/Brain1Connections\")\n",
-        "connections = connectionRead(\"/content/Brain1Connections\")\n",
-        "\n",
-        "neighbours = []\n",
-        "\n",
-        "for i in range(len(connections)):\n",
-        "  for j in range(len(connections)):\n",
-        "     if connections[i][j] == 1 and i < j:\n",
-        "       neighbours.append([i, j])"
+        "connections = connectionRead(\"/content/Brain1Connections\")"
       ],
-      "execution_count": 34,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,9 +120,153 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_P3DmJPvt56R"
+      },
+      "source": [
+        "# Additional Methods"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "OlP6TyE0gJgv"
+        "id": "K7lWPu8hupvO"
+      },
+      "source": [
+        "# Calculate distance between 2 points in Euclidean space\n",
+        "# Positions should be 3D (X,Y,Z)\n",
+        "\n",
+        "def Euclidean_dist(p1, p2):\n",
+        "    point1 = np.array((positions[0][p1], positions[1][p1], positions[2][p1]))\n",
+        "    point2 = np.array((positions[0][p2], positions[1][p2], positions[2][p2]))\n",
+        "    return np.linalg.norm(point1 - point2)"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eUx8qKdGzGqG"
+      },
+      "source": [
+        "# Add a key-value pair to the existing dictionary\n",
+        "\n",
+        "def add_element(dict, key, value):\n",
+        "    if key not in dict:\n",
+        "        dict[key] = []\n",
+        "    dict[key].append(value)"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0vRPUCIEwdzn"
+      },
+      "source": [
+        "# Returns with a dictionary. Key is the number of the node and \n",
+        "# the value is the distant between the current node(act) and its neighbour.\n",
+        "# The list is ascendant by the distance.\n",
+        "\n",
+        "def get_dist(act, neighbours):\n",
+        "    dist = {}\n",
+        "    \n",
+        "    for i in neighbours:\n",
+        "        add_element(dist, i, Euclidean_dist(act, i))\n",
+        "    \n",
+        "    dist = sorted(dist.items(), key=lambda x: x[1])\n",
+        "    \n",
+        "    return dist"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nsSUR0fktaYy"
+      },
+      "source": [
+        "def chooseRandomShortest(paths):\n",
+        "  randomPaths = []\n",
+        "\n",
+        "  for i in paths:\n",
+        "    randomPaths.append(random.choice(i))\n",
+        "\n",
+        "  return randomPaths"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tL9t2u43ta9t"
+      },
+      "source": [
+        "def avgEntropy(graph, routingTables):\n",
+        "  sum = 0\n",
+        "\n",
+        "  for i in range(len(graph.nodes)):\n",
+        "    routingTables[i].getNextHopsList()\n",
+        "    sum += entropy(routingTables[i].nextHops)\n",
+        "  \n",
+        "  return (sum / len(graph.nodes))"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bcQnKU_wuquu"
+      },
+      "source": [
+        "def readWeightedIn():\n",
+        "  greedyNeighbours = []\n",
+        "  for i in range(len(connections)):\n",
+        "    for j in range(len(connections)):\n",
+        "       if connections[i][j] == 1 and i < j:\n",
+        "          dist = Euclidean_dist(i,j)\n",
+        "          greedyNeighbours.append([i,j,dist])\n",
+        "  return greedyNeighbours"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EA6ZOlzlu5gO"
+      },
+      "source": [
+        "def readUnweightedIn():\n",
+        "  neighbours = []\n",
+        "  for i in range(len(connections)):\n",
+        "    for j in range(len(connections)):\n",
+        "      if connections[i][j] == 1 and i < j:\n",
+        "        neighbours.append([i, j])\n",
+        "  return neighbours"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sT9XccYctiYF"
+      },
+      "source": [
+        "# Graph algorithms"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yBUBtfClth1o"
       },
       "source": [
         "def findPaths(src, graph):\n",
@@ -133,81 +279,98 @@
         "  \n",
         "  return paths"
       ],
-      "execution_count": 35,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LPN462G0hVhW"
+        "id": "4tCxbdT0tXS2"
       },
       "source": [
-        "def chooseRandomShortest(paths):\n",
-        "  randomPaths = []\n",
+        "def greedy(graph, src, dest):\n",
+        "  pathsGreedy = []\n",
+        "  pathsGreedy.append(src)\n",
+        "  ready = False\n",
+        "  act = src\n",
         "\n",
-        "  for i in paths:\n",
-        "    randomPaths.append(random.choice(i))\n",
+        "  while ready==False:\n",
+        "    nbours = [n for n in graph.neighbors(act)]\n",
         "\n",
-        "  return randomPaths"
+        "    # Calculates the distances of the neighbour nodes from the end node\n",
+        "    dist = get_dist(dest, nbours)\n",
+        "\n",
+        "    # if the 'dest' is connected with 'act'\n",
+        "    if dest in nbours:\n",
+        "      pathsGreedy.append(dest)\n",
+        "      return pathsGreedy\n",
+        "\n",
+        "    # if 'act' has no neighbours \n",
+        "    elif len(nbours) == 0:\n",
+        "      return \"No neighbours\"\n",
+        "\n",
+        "    # if 'act' has just 1 neighbour\n",
+        "    elif len(neighbours) == 1:\n",
+        "      act = nbours[0]\n",
+        "      pathsGreedy.append(act)\n",
+        "\n",
+        "    elif len(nbours) > 1:\n",
+        "      not_found = False\n",
+        "      for i in dist:\n",
+        "        if i[0] not in pathsGreedy:\n",
+        "          act = i[0]\n",
+        "          pathsGreedy.append(act)\n",
+        "          not_found = True\n",
+        "          break\n",
+        "      # If there are no more choosable node on the list\n",
+        "      if not_found == False:\n",
+        "        act = dist[0][0]\n",
+        "        pathsGreedy.append(act)"
       ],
-      "execution_count": 36,
+      "execution_count": 49,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "SlCCfaMSnxq1"
+        "id": "8c94aeeEs40d"
       },
       "source": [
-        "def avgEntropy(graph, routingTables):\n",
-        "  sum = 0\n",
-        "\n",
-        "  for i in range(len(graph.nodes)):\n",
-        "    routingTables[i].getNextHopsList()\n",
-        "    sum += entropy(routingTables[i].nextHops)\n",
-        "  \n",
-        "  return (sum / len(graph.nodes))"
-      ],
-      "execution_count": 37,
-      "outputs": []
+        "# Classes"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PXVPLb49kZXh"
+        "id": "M1AvgT_irHqX"
       },
       "source": [
-        "# Init Graph\n",
+        "class Graph():\n",
+        "  def __init__(self,):\n",
+        "    self.G = nx.Graph()\n",
+        "    self.nodes = self.G.nodes\n",
         "\n",
-        "G = nx.Graph()\n",
-        "for i in neighbours:\n",
-        "  G.add_edge(i[0],i[1])\n",
+        "  def addWeightedEdges(self, neighborList):\n",
+        "    for i in neighborList:\n",
+        "      self.G.add_edge(i[0], i[1], weight=i[2])\n",
         "\n",
-        "# number of nodes\n",
-        "size = len(G.nodes)\n",
-        "\n",
-        "# List of paths from nodes to nodes\n",
-        "paths = []\n",
-        "for i in range(size):\n",
-        "  temp = []\n",
-        "  for j in range(size):\n",
-        "    if i!=j:\n",
-        "      path = [p for p in nx.all_shortest_paths(G, source=i, target=j)]\n",
-        "      temp.append(path)\n",
-        "  paths.append(temp)"
+        "  def addUnweightedEdges(self, neighborList):\n",
+        "    for i in neighborList:\n",
+        "      self.G.add_edge(i[0],i[1])"
       ],
-      "execution_count": 38,
+      "execution_count": 80,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q_i1r3bpcwe_"
+        "id": "6jrBR0R0s8rC"
       },
       "source": [
         "class routingTable():\n",
         "\n",
-        "  def __init__(self, nodeID):\n",
+        "  def __init__(self, nodeID, graph):\n",
+        "    self.graph = graph.G\n",
         "    self.nodeID = nodeID\n",
         "    self.table = []\n",
         "    self.nextHops = []\n",
@@ -215,8 +378,8 @@
         "  def addtoTable(self, dest, nextHop):\n",
         "    self.table.append([dest, nextHop])\n",
         "\n",
-        "  def findNextHop(self, graph):\n",
-        "    paths = findPaths(self.nodeID, graph)\n",
+        "  def findNextHop(self):\n",
+        "    paths = findPaths(self.nodeID, self.graph)\n",
         "    paths = chooseRandomShortest(paths)\n",
         "    for i in paths:\n",
         "      self.addtoTable(i[-1], i[1])\n",
@@ -226,7 +389,137 @@
         "    for i in self.table:\n",
         "      self.nextHops.append(i[1])"
       ],
-      "execution_count": 39,
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zNQUL8Wg2Gks"
+      },
+      "source": [
+        "# **GREEDY ALGORITHM**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jqS5tMeTt_KY"
+      },
+      "source": [
+        "Ggreedy = Graph()\n",
+        "greedyNeighbours = readWeightedIn()\n",
+        "Ggreedy.addWeightedEdges(greedyNeighbours)"
+      ],
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jXrYp8x6150t"
+      },
+      "source": [
+        "pathsGreedy = []\n",
+        "\n",
+        "for i in range(len(Ggreedy.nodes)):\n",
+        "  temp = []\n",
+        "  for j in range(len(Ggreedy.nodes)):\n",
+        "    if i!=j:\n",
+        "      temp.append(greedy(Ggreedy.G,i,j))\n",
+        "  pathsGreedy.append(temp)"
+      ],
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6uYfZBva3C0V"
+      },
+      "source": [
+        "routingGreedyTable = []\n",
+        "\n",
+        "for i in pathsGreedy:\n",
+        "  temp = []\n",
+        "  for j in i:\n",
+        "    temp.append([j[-1], j[1]])\n",
+        "  routingGreedyTable.append(temp)"
+      ],
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bvbOpveb3OPO"
+      },
+      "source": [
+        "greedyNextHops = []\n",
+        "\n",
+        "for i in routingGreedyTable:\n",
+        "  temp = []\n",
+        "  for j in i:\n",
+        "    temp.append(j[1])\n",
+        "  greedyNextHops.append(temp)"
+      ],
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UOFcaxJA4kA0",
+        "outputId": "9856d0ef-6439-4661-adb7-3ca221c7a112"
+      },
+      "source": [
+        "sum = 0\n",
+        "\n",
+        "for i in range(len(Ggreedy.nodes)):\n",
+        "  sum += entropy(greedyNextHops[0])\n",
+        "\n",
+        "avgGreedyEntropy = sum / len(Ggreedy.nodes)\n",
+        "avgGreedyEntropy"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.102882086518131"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S923ThXR2OJv"
+      },
+      "source": [
+        "# **RANDOM UNWEIGHTED**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PXVPLb49kZXh"
+      },
+      "source": [
+        "G = Graph()\n",
+        "neighbours = readUnweightedIn()\n",
+        "G.addUnweightedEdges(neighbours)"
+      ],
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -238,15 +531,15 @@
         "# Each nodes' routing table\n",
         "routingTables = []\n",
         "\n",
-        "for j in range(100):\n",
+        "for j in range(10):\n",
         "  routingtable = []\n",
         "  for i in range(len(G.nodes)):\n",
-        "    table = routingTable(i)\n",
-        "    table.findNextHop(G)\n",
+        "    table = routingTable(i,G)\n",
+        "    table.findNextHop()\n",
         "    routingtable.append(table)\n",
         "  routingTables.append(routingtable)"
       ],
-      "execution_count": 48,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -260,19 +553,54 @@
         "for i in routingTables:\n",
         "  entropyList.append(avgEntropy(G, i))"
       ],
-      "execution_count": 49,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Z5oq81ENtUet"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Qcb5QHF5tOO",
+        "outputId": "2b59f1f3-d47b-492f-c6ab-4f0220a7a655"
       },
       "source": [
-        ""
+        "entropyList"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4.245982423362341,\n",
+              " 4.250469848455398,\n",
+              " 4.247939080793474,\n",
+              " 4.246330849763421,\n",
+              " 4.245614763704439,\n",
+              " 4.243350411067987,\n",
+              " 4.246620776826123,\n",
+              " 4.25031940012612,\n",
+              " 4.248992561418494,\n",
+              " 4.246167628965554]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JlqG6qMJDIxL"
+      },
+      "source": [
+        "# **KRIUKOV GRÁFGENERÁLÁS**"
+      ]
     }
   ]
 }
