Létrehozva a Colaboratory használatával

--- a/routingtable.ipynb
+++ b/routingtable.ipynb
@@ -7,7 +7,7 @@
       "name": "routingtable.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOI0Hn3JS6DEhIiCjx7Nurk",
+      "authorship_tag": "ABX9TyN4aPms7wK/GJmPKPED6BMP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "import matplotlib.pyplot as plt\n",
         "import statistics"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "        csv_out = csv.writer(csv_1)\n",
         "        csv_out.writerows([list[index]] for index in range(0, len(list)))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "# List of connection tables\n",
         "conn = []"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "# List of how nodes connected to each other\n",
         "conn.append(connectionRead(\"/content/Brain11Connections\"))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
         "pos.append(positionRead(\"/content/Brain110Positions\"))\n",
         "conn.append(connectionRead(\"/content/Brain110Connections\"))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
         "    point2 = np.array((positions[0][p2], positions[1][p2], positions[2][p2]))\n",
         "    return np.linalg.norm(point1 - point2)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
         "    point2 = np.array((p2[0], p2[1]))\n",
         "    return np.linalg.norm(point1 - point2)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "\n",
         "  return np.arccosh(np.cosh(y1)*np.cosh(x2-x1)*np.cosh(y2)-np.sinh(y1)*np.sinh(y2))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
         "        dict[key] = []\n",
         "    dict[key].append(value)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
         "\n",
         "  return randomPaths"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
         "  \n",
         "  return (sum / len(graph.nodes))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,7 +327,7 @@
         "          greedyNeighbours.append([i,j,dist])\n",
         "  return greedyNeighbours"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
         "        neighbours.append([i, j])\n",
         "  return neighbours"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "  \n",
         "  return paths"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -420,7 +420,7 @@
         "        act = dist[0][0]\n",
         "        pathsGreedy.append(act)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -485,7 +485,7 @@
         "        y_circle = [self.inputRadius*math.sin(i) for i in np.arange(0, math.pi*2, 0.01)]\n",
         "        plt.plot(x_circle, y_circle, '-k')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +530,7 @@
         "    for i in neighborList:\n",
         "      self.G.add_edge(i[0],i[1])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +569,7 @@
         "    for i in self.table:\n",
         "      self.nextHops.append(i[1])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
         "  entropyGreedyValue = avgEntropy(Ggreedy, routingTablesGreedy)\n",
         "  return entropyGreedyValue"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +639,7 @@
         "    \n",
         "  return entropyList"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +665,7 @@
         "  network.growNetwork()\n",
         "  return network"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,7 +704,7 @@
         "\n",
         "  return entropyListKriukov"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -735,7 +735,7 @@
         "  entropyGreedyKriukovValue = avgEntropy(GKriukov, routingTablesGreedyKriukov)\n",
         "  return entropyGreedyKriukovValue"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -753,7 +753,7 @@
         "id": "H2ZPFrkCHWKy"
       },
       "source": [
-        "'''# Number of data tables\n",
+        "# Number of data tables\n",
         "batchSize = len(pos)\n",
         "# List of entropies:\n",
         "# 1. Random algorithm entropies:\n",
@@ -763,9 +763,9 @@
         "# 3. Random, Kriukov generated network entropies:\n",
         "entropyRandomKriukov = []\n",
         "# 4. Greedy, Kriukov generated network entropies:\n",
-        "entropyGreedyKriukov = []'''"
+        "entropyGreedyKriukov = []"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -774,7 +774,7 @@
         "id": "Oa1lgwFgIEDd"
       },
       "source": [
-        "'''for i in range(batchSize):\n",
+        "for i in range(batchSize):\n",
         "  # Network, routing tables and other methods use 'positions' and 'connections' list variable through the code. \n",
         "  # These two are the current data table during the iteration\n",
         "  positions = pos[i]\n",
@@ -783,11 +783,11 @@
         "  nodesNumber = len(positions[0])\n",
         "\n",
         "  # Init Graph for random and greedy algorithms\n",
-        "  G = Graph()\n",
+        "  '''G = Graph()\n",
         "  G.addConnections(connections)\n",
         "  G.addPositions(positions)\n",
         "  G.addUnweightedEdges()\n",
-        "  G.addWeightedEdges()\n",
+        "  G.addWeightedEdges()'''\n",
         "\n",
         "  # Create a network (radius = 1, nodes = nodesNumber)\n",
         "  network = generateNetwork(1, nodesNumber)\n",
@@ -799,14 +799,14 @@
         "  GKriukov.addWeightedNetworkEdges(network)\n",
         "\n",
         "  # Random and Greedy entropies\n",
-        "  entropyRandom.append(getRandomEntropy(G, 100))\n",
-        "  entropyGreedy.append(getGreedyEntropy(G))\n",
+        "  '''entropyRandom.append(getRandomEntropy(G, 100))\n",
+        "  entropyGreedy.append(getGreedyEntropy(G))'''\n",
         "\n",
         "  # Random and Greedy on Kriukov networks\n",
-        "  # entropyRandomKriukov.append(getKriukovGraphRandomEntropy(GKriukov, 10))\n",
-        "  # entropyGreedyKriukov.append(getKriukovGraphGreedyEntropy(GKriukov))'''"
+        "  entropyRandomKriukov.append(getKriukovGraphRandomEntropy(GKriukov, 10))\n",
+        "  entropyGreedyKriukov.append(getKriukovGraphGreedyEntropy(GKriukov))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,9 +815,10 @@
         "id": "FOl_0yOZSq9_"
       },
       "source": [
-        "printOut(\"greedy\", entropyGreedy)"
+        "printOut(\"greedyKriukov\", entropyGreedyKriukov)\n",
+        "printOut(\"randomKriukov\", entropyRandomKriukov)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -831,29 +832,19 @@
         "outputId": "cfec9add-f217-4721-d9e3-9f2e3ca5914f"
       },
       "source": [
-        "greedyPoints = np.array(entropyGreedy)\n",
+        "'''greedyPoints = np.array(entropyGreedy)\n",
         "randomPoints = np.array(entropyRandom)\n",
         "\n",
-        "plt.figure(figsize=(20, 10))\n",
-        "plt.plot(randomPoints[0], marker = 'o', label=\"Random\")\n",
-        "'''plt.plot(randomPoints[1], marker = 'o')\n",
-        "plt.plot(randomPoints[2], marker = 'o')\n",
-        "plt.plot(randomPoints[3], marker = 'o')\n",
-        "plt.plot(randomPoints[4], marker = 'o')\n",
-        "plt.plot(randomPoints[5], marker = 'o')\n",
-        "plt.plot(randomPoints[6], marker = 'o')\n",
-        "plt.plot(randomPoints[7], marker = 'o')\n",
-        "plt.plot(randomPoints[8], marker = 'o')\n",
-        "plt.plot(randomPoints[9], marker = 'o')'''\n",
-        "plt.axhline(y=greedyPoints[0], color='r', linestyle='-', label=\"Greedy\")\n",
-        "\n",
-        "# plt.xticks(np.arange(len(randomPoints[0])), np.arange(1, len(randomPoints[0])+1))\n",
-        "plt.ylabel(\"Entropy\")\n",
-        "plt.xlabel(\"Brain graphs\")\n",
-        "plt.legend()\n",
-        "plt.grid()"
+        "for i in range(len(greedyPoints)):\n",
+        "  plt.figure(figsize=(20, 10))\n",
+        "  plt.plot(randomPoints[i], marker = 'o', label=\"Random\")\n",
+        "  plt.axhline(y=greedyPoints[i], color='r', linestyle='-', label=\"Greedy\")\n",
+        "  plt.ylabel(\"Entropy\")\n",
+        "  plt.xlabel(\"Brain graphs\")\n",
+        "  plt.legend()\n",
+        "  plt.grid()'''"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -884,16 +875,16 @@
         "greedyKriukovpoints = np.array(entropyGreedyKriukov)\n",
         "randomKriukovpoints = np.array(entropyRandomKriukov)\n",
         "\n",
-        "plt.plot(greedyKriukovpoints, marker = 'o', label=\"Greedy Kriukov\")\n",
-        "plt.plot(randomKriukovpoints, marker = 'o', label=\"Random Kriukov\")\n",
-        "plt.ylabel(\"Entropy\")\n",
-        "plt.xlabel(\"Kriukov graphs\")\n",
-        "plt.xticks(range(0,10))\n",
-        "plt.legend()\n",
-        "plt.grid()\n",
-        "plt.figure(figsize=(16, 6))"
+        "for i in range(len(greedyKriukovpoints)):\n",
+        "  plt.figure(figsize=(20, 10))\n",
+        "  plt.plot(randomKriukovpoints[i], marker = 'o', label=\"Random\")\n",
+        "  plt.axhline(y=greedyKriukovpoints[i], color='r', linestyle='-', label=\"Greedy\")\n",
+        "  plt.ylabel(\"Entropy\")\n",
+        "  plt.xlabel(\"Kriukov graphs\")\n",
+        "  plt.legend()\n",
+        "  plt.grid()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
